--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+when i click on image -1,is this an exam  it should show image -2 content,<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -173,7 +173,6 @@
   .card{ padding:18px; }
   .why-grid .card + .card{ margin-top:12px; }
 }
-
 
 
     /* Comparison */
@@ -364,11 +363,12 @@
           </div>
 
           <div class="accordion" id="examAcc">
-  <div class="acc-h"><span>❓ “Is this an exam?”</span><span class="toggle">⌄</span></div>
-  <div class="acc-b">
-    <p>Nope 🙂 — this isn’t a memory-based test. Our IIT mentors <b>talk 1-on-1</b> with your child, <b>teach a sample concept</b>, and ask a few <b>conceptual &amp; numerical questions</b> to understand real comprehension and application. It’s <b>stress-free</b> and focused on <b>diagnosis, not scores</b>.</p>
-  </div>
-</div>
+            <div class="acc-h"><span>❓ “Is this an exam?”</span><span class="toggle">⌄</span></div>
+            <div class="acc-b">
+              <p>Nope 🙂 — this isn’t a memory-based test. Our IIT mentors <b>talk 1-on-1</b> with your child, <b>teach a sample concept</b>, and ask a few <b>conceptual &amp; numerical questions</b> to understand real comprehension and application. It’s <b>stress-free</b> and focused on <b>diagnosis, not scores</b>.</p>
+            </div>
+          </div>
+        </div>
 
         <!-- Step 2 header -->
         <article class="step" id="roadmap-step">
@@ -1213,9 +1213,6 @@
 </a>
 
 <script>
-  <script>
-
-
   // ===== Countdown (shared for both timers) =====
   const deadlineISO = new Date(Date.now() + 2*24*60*60*1000).toISOString();
   const DLINE = new Date(deadlineISO);
@@ -1267,6 +1264,4 @@
 
   
 
-
-  
 
