--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-when i click on image -1,is this an exam  it should show image -2 content,<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
