--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 <article class="step" id="reviews-step">
   <div class="num">4</div>
   <div>
-    <h3>Reviews &amp; Results</h3>
+    <h3>Continuous Tracking Real-Time Corrections. ✅</h3>
     <div class="sub">Track progress every day</div>
   </div>
 </article>
