--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       <div class="stats">
         <div class="pill">✅ Hundreds of IITs/NITs</div>
         <div class="pill">🏆 10+ Years Excellence</div>
-        <div class="pill">🎯 AIR under 100 per% 1-1 only</div>
+        <div class="pill">🎯 AIR under 100 • 1-on-1 only </div>
         <div class="pill">⚡ Max 50 students because best faculty are always limited</div>
       </div>
       <h1>Transform Your Child's IIT Dreams into Reality</h1>
@@ -304,10 +304,18 @@
       <div class="hero-ctas">
         <a class="btn btn-wa" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment" target="_blank" rel="noopener">💬 WhatsApp: Book Free Assessment</a>
         <a class="btn btn-outline" href="tel:+919010031000">📞 Call: +91 9010031000</a>
-      </div>
-      <small>🛡️ Progress Guarantee + 30-Day Money-Back</small>
-    </div>
+      <div class="guarantee-badge">
+  🛡️ Progress Guarantee + 30-Day Money-Back
+</div>
   </section>
+        /* Guarantee badge */
+.guarantee-badge{
+  display:inline-flex;align-items:center;gap:10px;
+  background:#fff;color:#111;font-weight:700;font-size:14px;
+  padding:12px 16px;border-radius:999px;border:1px solid #e5e7eb;
+  box-shadow:0 6px 18px rgba(0,0,0,.10);
+}
+
 
   <!-- Trust -->
   <section class="trust">
@@ -442,7 +450,7 @@
 <article class="step" id="reviews-step">
   <div class="num">4</div>
   <div>
-    <h3>Continuous Tracking Real-Time Corrections. ✅</h3>
+    <h3>Continuous Tracking. Real-Time Corrections. ✅</h3>
     <div class="sub">Track progress every day</div>
   </div>
 </article>
