--- a/index.html
+++ b/index.html
@@ -535,7 +535,9 @@
           <div class="card-xl review-card">
             <div class="badge">AIR 23</div>
             <div class="review-name">Sri Charan Reddy</div>
-            <div class="review-note">Physics 45% → 96% with targeted mentoring.</div>
+            <strong>Physics: 45% → 96%</strong>  
+            <span style="color:#16a34a">+51% Improvement in 8 Weeks ✅</span>
+
           </div>
 
           <div class="card-xl review-card">
