--- a/index.html
+++ b/index.html
@@ -528,7 +528,11 @@
   <!-- ===== Reviews / Toppers (side-scroll, big) ===== -->
   <section class="success" id="success" style="padding:24px 0">
     <div class="container">
-      <h2 class="section-title">JEE Advanced Toppers</h2>
+      <h2>
+  From Struggling to <span style="color:#16a34a">IIT Success 🚀</span><br>
+  Meet Our JEE Advanced Toppers
+</h2>
+
 
       <div class="carousel-wrapper" style="background:#f8fafc;border-radius:16px;padding:8px 0">
         <div class="carousel" aria-label="Topper stories">
