--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@
     .review-name{font-weight:900;font-size:18px;margin:0 0 6px}
     .review-note{color:#374151;font-size:15px}
 
-    /* ======= NEW: Large photo student cards (toppers) ======= */
+    /* ======= Large photo student cards (toppers) ======= */
     .student-card{
       scroll-snap-align:start;
-      min-width:clamp(300px,68vw,520px);
+      /* ⬇️ reduced horizontal size */
+      min-width:clamp(260px,56vw,460px);
       background:#fff;border:1px solid var(--ring);
       border-radius:18px;overflow:hidden;
       box-shadow:0 12px 28px rgba(0,0,0,.08);
@@ -177,12 +178,11 @@
     .f-points .icon{width:22px;text-align:center;flex:0 0 22px}
     .founder .bullets li{color:#e5e7eb}
 
-    /* Comparison layout: 2 cols on desktop, stacked on mobile */
+    /* Comparison layout */
     .why-grid{ display:grid; grid-template-columns:1fr 1fr; gap:24px; align-items:start; }
     .card{ background:#fff; border:1px solid #f1f5f9; border-radius:18px; padding:24px; box-shadow:0 8px 28px rgba(0,0,0,.06); }
     .card-red h3{ color:#ef4444; }
     .card-green h3{ color:#10b981; }
-
     @media (max-width:768px){
       .why-grid{ grid-template-columns:1fr; }
       .card{ padding:18px; }
@@ -264,10 +264,9 @@
       .carousel-wrapper::after{background:linear-gradient(270deg,#f8fafc,rgba(248,250,252,0))}
     }
 
-    /* ======== ONLY THESE TWO SECTIONS WIDER ======== */
-    .wa-rail .container,
-    #success .container{ max-width:1400px; }
-    /* Center toppers heading */
+    /* ======= container width rules for two rails ======= */
+    .wa-rail .container{ max-width:1400px; }              /* keep WhatsApp rail wide */
+    #success .container{ max-width:1200px; }              /* ⬅️ slightly narrower now */
     #success h2{ text-align:center; margin-bottom:14px; }
   </style>
 </head>
@@ -593,10 +592,10 @@
   <section id="mentoring-video" style="padding:24px 0;background:#fff">
     <div class="container">
       <h2 class="section-title" style="margin-bottom:8px">2-minute walkthrough of the mentoring system</h2>
-      <div class="yt-wrap" style="position:relative; width:100%; max-width:900px; margin:0 auto; border-radius:16px; overflow:hidden; background:#000; box-shadow:0 12px 28px rgba(0,0,0,.12);">
-        <iframe src="https://www.youtube.com/embed/-dA8MyVsFZM" title="iiTuitions video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="position:absolute; inset:0; width:100%; height:100%;"></iframe>
-        <div style="padding-top:56.25%"></div>
-      </div>
+    <div class="yt-wrap" style="position:relative; width:100%; max-width:900px; margin:0 auto; border-radius:16px; overflow:hidden; background:#000; box-shadow:0 12px 28px rgba(0,0,0,.12);">
+      <iframe src="https://www.youtube.com/embed/-dA8MyVsFZM" title="iiTuitions video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="position:absolute; inset:0; width:100%; height:100%;"></iframe>
+      <div style="padding-top:56.25%"></div>
+    </div>
     </div>
   </section>
 
@@ -643,12 +642,7 @@
     #reviews .wrap{max-width:1100px;margin:0 auto;padding:0 12px}
     #reviews .headline{ text-align:center;margin-bottom:12px;font-weight:900;line-height:1.2 }
     #reviews .headline .em{ color:#10b981 }
-    .rating-box{
-      display:flex;align-items:center;justify-content:center;gap:10px;
-      background:#fff;border:1px solid #eef2f7;border-radius:18px;
-      padding:12px 16px;margin:0 auto 18px;box-shadow:0 10px 26px rgba(0,0,0,.06);
-      max-width:720px;font-weight:800
-    }
+    .rating-box{ display:flex;align-items:center;justify-content:center;gap:10px;background:#fff;border:1px solid #eef2f7;border-radius:18px;padding:12px 16px;margin:0 auto 18px;box-shadow:0 10px 26px rgba(0,0,0,.06);max-width:720px;font-weight:800}
     .glogo{display:inline-flex;align-items:center;gap:6px}
     .glogo svg{width:18px;height:18px}
     .stars{color:#facc15;font-size:18px;letter-spacing:1px}
@@ -725,7 +719,7 @@
     </div>
   </section>
 
-  <!-- PROGRESS + TRIPLE GUARANTEE (unchanged) -->
+  <!-- PROGRESS + TRIPLE GUARANTEE -->
   <style>
     .progress-sec{ background:#0a0a0a;color:#fff;padding:56px 0 }
     .progress-wrap{max-width:1100px;margin:0 auto;padding:0 14px;display:grid;grid-template-columns:1.05fr .95fr;gap:28px;align-items:center}
