--- a/index.html
+++ b/index.html
@@ -723,10 +723,7 @@
     </div>
   </section>
 
-
-
-
-<!-- ===== Mentors (3-card side scroll) ===== -->
+<!-- ===== Mentors (side-scrollable) ===== -->
 <section id="mentors" style="background:#fff;padding:24px 0">
   <style>
     /* Mentors rail */
@@ -745,9 +742,9 @@
       box-shadow:0 10px 26px var(--shadow1)
     }
     .m-head{display:flex;align-items:center;gap:12px}
-    /* circle avatar like your screenshot */
+    /* circular avatar like your screenshot */
     .m-ava{
-      width:72px;height:72px;border-radius:999px;object-fit:cover;
+      width:76px;height:76px;border-radius:999px;object-fit:cover;
       background:#eef2f7;border:3px solid #e5e7eb;box-shadow:0 8px 22px rgba(0,0,0,.08)
     }
     .m-name{font-weight:900;font-size:18px;line-height:1.2;color:#0b1220}
@@ -765,11 +762,11 @@
         <!-- Keshav -->
         <article class="m-card">
           <div class="m-head">
-            <!-- replace src with your image -->
-            <img class="m-ava" src="" alt="Keshav — IIT Bombay, Maths">
+            <!-- replace src with your real image path -->
+            <img class="m-ava" src="keshav.jpg" alt="Keshav — NIT Delhi, Mathematics" loading="lazy">
             <div>
               <div class="m-name">Keshav</div>
-              <div class="m-meta">IIT Bombay • Maths</div>
+              <div class="m-meta">NIT Delhi • Mathematics</div>
             </div>
           </div>
           <p class="m-line">“Turns weak Algebra into score makers.”</p>
@@ -778,29 +775,50 @@
         <!-- Jyothi -->
         <article class="m-card">
           <div class="m-head">
-            <img class="m-ava" src="" alt="Jyothi — IIT Delhi, Physics">
+            <img class="m-ava" src="jyothi.jpg" alt="Jyothi — 13+ yrs Experience, Physics" loading="lazy">
             <div>
               <div class="m-name">Jyothi</div>
-              <div class="m-meta">IIT Delhi • Physics</div>
+              <div class="m-meta">13+ yrs Experienced Faculty • Physics</div>
             </div>
           </div>
           <p class="m-line">“Concept → application in every session.”</p>
         </article>
 
-        <!-- Pooja -->
+        <!-- Raghu Vamshi -->
         <article class="m-card">
           <div class="m-head">
-            <img class="m-ava" src="" alt="Pooja — NIT Warangal, Chemistry">
+            <img class="m-ava" src="raghu-vamshi.jpg" alt="Raghu Vamshi — IIT Kanpur, Chemistry" loading="lazy">
             <div>
-              <div class="m-name">Raghuvamshi</div>
-              <div class="m-meta">IIT Indore • Chemistry</div>
+              <div class="m-name">Raghu Vamshi</div>
+              <div class="m-meta">IIT Kanpur • Chemistry</div>
             </div>
           </div>
-          <p class="m-line">“Organic made simple with daily drills.”</p>
+          <p class="m-line">“Organic mechanisms made simple with daily drills.”</p>
+        </article>
+
+        <!-- Abrar -->
+        <article class="m-card">
+          <div class="m-head">
+            <img class="m-ava" src="abrar.jpg" alt="Abrar — IIT Bombay, Mathematics" loading="lazy">
+            <div>
+              <div class="m-name">Abrar</div>
+              <div class="m-meta">IIT Bombay • Mathematics</div>
+            </div>
+          </div>
+          <p class="m-line">“Calculus clarity that sticks for JEE.”</p>
         </article>
 
       </div>
     </div>
+
+    <div class="m-cta">
+      <a class="btn btn-wa" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20match%20a%20mentor%20to%20my%20child" target="_blank" rel="noopener">
+        💬 Match a Mentor to My Child
+      </a>
+    </div>
+  </div>
+</section>
+
 
     <div class="m-cta">
       <a class="btn btn-wa" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20match%20a%20mentor%20to%20my%20child" target="_blank" rel="noopener">
