--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
               <div class="m-meta">NIT Delhi • Mathematics</div>
             </div>
           </div>
-          <p class="m-line">“Turns weak Algebra into score makers.”</p>
+          <p class="m-line">“Small drills daily; big scores monthly.”</p>
         </article>
 
         <!-- Jyothi -->
