--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
         <div class="carousel" aria-label="Topper stories">
           <!-- Card 1 -->
           <article class="student-card">
-            <div class="student-photo" style="background-image:url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=1400&auto=format&fit=crop');">
+            <div class="student-photo" style="background-image:url('stu1.jpg');">
               <div class="student-ribbon">
                 <div class="student-name">Sri Charan</div>
                 <div class="student-score">AIR 23 · 99.7%</div>
@@ -517,7 +517,7 @@
 
           <!-- Card 2 -->
           <article class="student-card">
-            <div class="student-photo" style="background-image:url('https://images.unsplash.com/photo-1520975916090-3105956dac38?q=80&w=1400&auto=format&fit=crop');">
+            <div class="student-photo" style="background-image:url('stu2.jpg');">
               <div class="student-ribbon">
                 <div class="student-name">Yashwitha</div>
                 <div class="student-score">IIT Delhi Admit</div>
@@ -531,7 +531,7 @@
 
           <!-- Card 3 -->
           <article class="student-card">
-            <div class="student-photo" style="background-image:url('https://images.unsplash.com/photo-1577896851231-70ef18881754?q=80&w=1400&auto=format&fit=crop');">
+            <div class="student-photo" style="background-image:url('stu3.jpg');">
               <div class="student-ribbon">
                 <div class="student-name">Arjun Sharma</div>
                 <div class="student-score">AIR 45 · 94% Maths</div>
