--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
         <div class="rev-list" aria-label="Parent reviews">
           <article class="rev-card">
             <div class="rev-head">
-              <img class="rev-avatar" src="parent1.jpg" alt="Srinivas Reddy">
+              <img class="rev-avatar" src="parent1.jpg" alt="Srinivas Reddy.png">
               <div>
                 <div class="rev-name">Srinivas Reddy <span class="badge">✔ Verified Parent</span></div>
                 <div class="rev-meta">Posted May 2025</div>
