--- a/index.html
+++ b/index.html
@@ -685,7 +685,8 @@
             <div class="rev-head">
               <img class="rev-avatar" src="parent1.jpg" alt="Srinivas Reddy.png">
               <div>
-                <div class="rev-name">Srinivas Reddy <span class="badge">✔ Verified Parent</span></div>
+                <img class="rev-avatar" src="./Srinivas%20Reddy.png" alt="Srinivas Reddy" width="46" height="46" loading="lazy">
+
                 <div class="rev-meta">Posted May 2025</div>
               </div>
             </div>
@@ -695,7 +696,7 @@
 
           <article class="rev-card">
             <div class="rev-head">
-              <img class="rev-avatar" src="parent2.jpg" alt="Meena Sharma">
+              <img class="rev-avatar" src="./Meena%20Sharma.png" alt="Meena Sharma" width="46" height="46" loading="lazy">
               <div>
                 <div class="rev-name">Meena Sharma <span class="badge">✔ Verified Parent</span></div>
                 <div class="rev-meta">Posted Apr 2025</div>
@@ -707,7 +708,7 @@
 
           <article class="rev-card">
             <div class="rev-head">
-              <img class="rev-avatar" src="parent3.jpg" alt="Arun Kumar">
+             <img class="rev-avatar" src="./Arun%20Kumar.png" alt="Arun Kumar" width="46" height="46" loading="lazy">
               <div>
                 <div class="rev-name">Arun Kumar <span class="badge">✔ Verified Parent</span></div>
                 <div class="rev-meta">Posted Feb 2025</div>
