--- a/index.html
+++ b/index.html
@@ -683,10 +683,11 @@
         <div class="rev-list" aria-label="Parent reviews">
           <article class="rev-card">
             <div class="rev-head">
-              <img class="rev-avatar" src="parent1.jpg" alt="Srinivas Reddy.png">
-              <div>
-                <img class="rev-avatar" src="./Srinivas%20Reddy.png" alt="Srinivas Reddy" width="46" height="46" loading="lazy">
+              <img class="rev-avatar" src="./Srinivas%20Reddy.png" alt="Srinivas Reddy" width="46" height="46" loading="lazy">
 
+            
+              <div>
+                <div class="rev-name">Srinivas Reddy <span class="badge">✔ Verified Parent</span></div>
                 <div class="rev-meta">Posted May 2025</div>
               </div>
             </div>
