--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
         <article class="m-card">
           <div class="m-head">
             <!-- replace src with your real image path -->
-            <img class="m-ava" src="keshav.png" alt="Keshav — NIT Delhi, Mathematics" loading="lazy">
+            <img class="m-ava" src="keshav.png.jpeg" alt="Keshav — NIT Delhi, Mathematics" loading="lazy">
             <div>
               <div class="m-name">Keshav</div>
               <div class="m-meta">NIT Delhi • Mathematics</div>
