--- a/index.html
+++ b/index.html
@@ -417,11 +417,65 @@
             <li><b>Exactly what to focus on for maximum JEE marks</b></li>
           </ul>
 
-          <div class="roadmap">
-            <h6>Not just a study plan — a success map.</h6>
-            <p>It’s a <b>success map</b> built around your child’s <b>strengths, weaknesses, and time left</b> — because <b>every child is different</b>.</p>
-          </div>
-        </div>
+          <!-- Scenario accordion (replaces the dashed .roadmap box) -->
+<div class="accordion" id="scenarioAcc">
+  <div class="acc-h"><span>📖 A real student scenario</span><span class="toggle">⌄</span></div>
+  <div class="acc-b">
+    <h5 style="margin-top:12px">Get Your Child’s Personalised IIT Success Roadmap</h5>
+
+    <p><b>Student (hesitant, during assessment):</b></p>
+    <p><i>
+      "Sir… I’m in Grade 12 now… but honestly…<br>
+      I don’t feel confident about half of my Grade 11 topics.<br>
+      In my coaching centre, there are <b>300 students in one batch</b>…<br>
+      They teach <b>so fast</b>…<br>
+      Even after revision classes, I still <b>don’t get many concepts</b>.<br><br>
+      Sometimes, I try solving questions… but I either <b>blank out</b> or <b>get stuck</b>.<br>
+      And now there are only <b>six months left</b> for JEE Mains…<br>
+      I want to work hard, but I <b>don’t even know where to start</b>."
+    </i></p>
+
+    <p style="margin-top:12px"><b>IIT Mentor (calm, reassuring):</b></p>
+    <p><i>
+      "I understand exactly how you feel.<br>
+      You’re <b>not alone</b> — we see this every year with students like you.
+    </i></p>
+    <p><i>
+      That’s why our process is <b>different</b>.<br>
+      We don’t just <b>throw a plan</b> at you.<br>
+      We <b>sit with you 1-on-1</b>, teach a small topic live, ask a few <b>conceptual</b> and <b>numerical</b> questions, and understand:
+    </i></p>
+
+    <ul class="bullets">
+      <li>Which topics you’re <b>confident</b> in</li>
+      <li>Where you’re <b>losing marks</b></li>
+      <li>How deep your <b>conceptual understanding</b> goes</li>
+      <li>How you <b>learn best</b> — visual, practice-driven, or problem-solving</li>
+    </ul>
+
+    <h5 style="margin-top:14px">After the Assessment</h5>
+    <p><i>"Based on this, we’ll prepare a <b>personalised IIT success roadmap</b> just for you:"</i></p>
+    <ul class="bullets">
+      <li><b>Quick wins first</b> → High-scoring Grade 11 topics that you can <b>master fast</b></li>
+      <li><b>Fix application gaps</b> → Where you <b>know concepts</b> but <b>struggle with numericals</b></li>
+      <li><b>Skip low-value chaos</b> → Chapters that <b>waste time</b> but give <b>low marks</b></li>
+      <li><b>Smartly align Grade 12 topics</b> → So you stay <b>in sync</b> with school and coaching</li>
+      <li><b>Make it realistic</b> → A plan you can <b>actually follow</b> without feeling overwhelmed</li>
+    </ul>
+
+    <p style="margin-top:12px"><b>Student (relieved):</b><br>
+      <i>"So you’ll actually <b>help me decide</b> what to study, what to skip, and <b>how to use these six months wisely</b>?"</i>
+    </p>
+
+    <p style="margin-top:8px"><b>IIT Mentor (smiling):</b><br>
+      <i>"Exactly 🙂<br>
+      Every student is different.<br>
+      This roadmap is <b>built only for you</b>, not for a batch.<br>
+      No stress. No guesswork. Just a <b>clear path</b> to your best JEE rank."</i>
+    </p>
+  </div>
+</div>
+
 
         <article class="step">
           <div class="num">3</div>
