--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     .accordion.open .toggle{transform:rotate(180deg)}
     .toggle{transition:.2s}
     #examAcc, #scenarioAcc { margin-bottom:14px; }
-    #assessment-details, #roadmap-details { margin-bottom:14px; }
+    #assessment-details, #roadmap-details, #mentorship-details { margin-bottom:14px; }
 
     #scenarioAcc { margin-bottom: 14px; }  /* space before Step 3 */
     
