--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
         <!-- Jyothi -->
         <article class="m-card">
           <div class="m-head">
-            <img class="m-ava" src="jyothi.jpg" alt="Jyothi — 13+ yrs Experience, Physics" loading="lazy">
+            <img class="m-ava" src="jyothi.png" alt="Jyothi — 13+ yrs Experience, Physics" loading="lazy">
             <div>
               <div class="m-name">Jyothi</div>
               <div class="m-meta">13+ yrs Experienced Faculty • Physics</div>
@@ -858,7 +858,7 @@
         <!-- Raghu Vamshi -->
         <article class="m-card">
           <div class="m-head">
-            <img class="m-ava" src="raghu-vamshi.jpg" alt="Raghu Vamshi — IIT Kanpur, Chemistry" loading="lazy">
+            <img class="m-ava" src="raghu-vamshi.png" alt="Raghu Vamshi — IIT Kanpur, Chemistry" loading="lazy">
             <div>
               <div class="m-name">Raghu Vamshi</div>
               <div class="m-meta">IIT Kanpur • Chemistry</div>
@@ -870,7 +870,7 @@
         <!-- Abrar -->
         <article class="m-card">
           <div class="m-head">
-            <img class="m-ava" src="abrar.jpg" alt="Abrar — IIT Bombay, Mathematics" loading="lazy">
+            <img class="m-ava" src="abrar.png" alt="Abrar — IIT Bombay, Mathematics" loading="lazy">
             <div>
               <div class="m-name">Abrar</div>
               <div class="m-meta">IIT Bombay • Mathematics</div>
