--- a/index.html
+++ b/index.html
@@ -533,24 +533,25 @@
   <section class="wa-rail" style="background:#fff;padding:24px 0">
     <div class="container">
       <h2 class="section-title">What Parents Text Us</h2>
+    <div class="card-xl shot">
+  <div class="img" style="background-image:url('3.png'); background-size:cover; background-position:center;"></div>
+  <div class="title">58% in Jan → AIR 238 (Roadmap + micro-tests)</div>
+</div>
+      
 
-      <div class="carousel-wrapper">
-        <div class="carousel" aria-label="Parent WhatsApp messages">
+  
           <div class="card-xl shot">
-            <div class="img"></div>
-            <div class="title">Physics 48% → 90% in 8 weeks</div>
-          </div>
+  <div class="img" style="background-image:url('1.png'); background-size:cover; background-position:center;"></div>
+  <div class="title">Referral from AIR 55 parent → Free assessment + roadmap</div>
+</div>
 
-          <div class="card-xl shot">
-            <div class="img"></div>
-            <div class="title">Weekly parent review calls</div>
-          </div>
+      <div class="card-xl shot">
+  <div class="img" style="background-image:url('2.png'); background-size:cover; background-position:center;"></div>
+  <div class="title">“Thanks for daily updates, he’s finally consistent”</div>
+</div>
 
-          <div class="card-xl shot">
-            <div class="img"></div>
-            <div class="title">“Thanks for daily updates, he’s finally consistent”</div>
-          </div>
 
+          
           <div class="card-xl shot">
             <div class="img"></div>
             <div class="title">Chemistry accuracy up by 35% in 1 month</div>
@@ -617,12 +618,12 @@
   </section>
 
   <!-- Founder -->
-  <section class="founder" id="founder">
-    <div class="container">
-      <div class="f-card">
-        <div class="f-left">
-          <img class="f-avatar" src="https://via.placeholder.com/240x240.png?text=Prudhvi" alt="Prudhvi — Founder of iiTuitions" />
-        </div>
+<section class="founder" id="founder">
+  <div class="container">
+    <div class="f-card">
+      <div class="f-left">
+        <img class="f-avatar" src="./prudhvi.png" alt="Prudhvi — Founder of iiTuitions" />
+      </div>
 
         <div class="f-right">
           <h2 class="f-title">Founded by Prudhvi — <span class="f-title-strong">NIT Warangal</span></h2>
