--- a/index.html
+++ b/index.html
@@ -534,19 +534,19 @@
     <div class="container">
       <h2 class="section-title">What Parents Text Us</h2>
     <div class="card-xl shot">
-  <div class="img" style="background-image:url('3.png.jpeg'); background-size:cover; background-position:center;"></div>
+  <div class="img" style="background-image:url('img'); background-size:cover; background-position:center;"></div>
   <div class="title">58% in Jan → AIR 238 (Roadmap + micro-tests)</div>
 </div>
       
 
   
           <div class="card-xl shot">
-  <div class="img" style="background-image:url('1.png.jpeg'); background-size:cover; background-position:center;"></div>
+  <div class="img" style="background-image:url('img'); background-size:cover; background-position:center;"></div>
   <div class="title">Referral from AIR 55 parent → Free assessment + roadmap</div>
 </div>
 
       <div class="card-xl shot">
-  <div class="img" style="background-image:url('2.png.jpeg'); background-size:cover; background-position:center;"></div>
+  <div class="img" style="background-image:url('img'); background-size:cover; background-position:center;"></div>
   <div class="title">“Thanks for daily updates, he’s finally consistent”</div>
 </div>
 
