--- a/index.html
+++ b/index.html
@@ -553,28 +553,30 @@
   <div class="container">
     <h2 class="section-title">What Parents Text Us</h2>
 
-    <div class="carousel-wrapper">
-      <div class="carousel" aria-label="Parent WhatsApp messages">
+<div class="carousel-wrapper">
+  <div class="carousel" aria-label="Parent WhatsApp messages">
 
-        <div class="card-xl shot">
-          <div class="img" style="background-image:url('3.png');"></div>
-          <div class="title">58% in Jan → AIR 238 (Roadmap + micro-tests)</div>
-        </div>
-
-        <div class="card-xl shot">
-          <div class="img" style="background-image:url('1.png');"></div>
-          <div class="title">Referral from AIR 55 parent → Free assessment + roadmap</div>
-        </div>
-
-        <div class="card-xl shot">
-          <div class="img" style="background-image:url('2.png');"></div>
-          <div class="title">“Thanks for daily updates, he’s finally consistent”</div>
-        </div>
-
-        
-
-      </div>
+    <!-- 2 -->
+    <div class="card-xl shot">
+      <div class="img" style="background-image:url('2.png');"></div>
+      <div class="title">From 58% in Jan → AIR 1898 — “Your roadmap + micro-tests changed everything”</div>
     </div>
+
+    <!-- 3 -->
+    <div class="card-xl shot">
+      <div class="img" style="background-image:url('3.png');"></div>
+      <div class="title">Micro-test 8/10; school weekly test jumped 9/20 → 14/20 — steady improvement</div>
+    </div>
+
+    <!-- 4 -->
+    <div class="card-xl shot">
+      <div class="img" style="background-image:url('4.png');"></div>
+      <div class="title">Referral from IIT-Bombay parent → booked free assessment → personalized roadmap</div>
+    </div>
+
+  </div>
+</div>
+
   </div>
 </section>
 
