--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>  o
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>IITuitions — Transform Your Child's IIT Dreams into Reality</title>
@@ -558,19 +558,19 @@
 
     <!-- 2 -->
     <div class="card-xl shot">
-      <div class="img" style="background-image:url('6.png');"></div>
+      <div class="img" style="background-image:url('6.png.jpeg');"></div>
       <div class="title">From 58% in Jan → AIR 1898 — “Your roadmap + micro-tests changed everything”</div>
     </div>
 
     <!-- 3 -->
     <div class="card-xl shot">
-      <div class="img" style="background-image:url('7.png');"></div>
+      <div class="img" style="background-image:url('7.png.jpeg');"></div>
       <div class="title">Micro-test 8/10; school weekly test jumped 9/20 → 14/20 — steady improvement</div>
     </div>
 
     <!-- 4 -->
     <div class="card-xl shot">
-      <div class="img" style="background-image:url('8.png');"></div>
+      <div class="img" style="background-image:url('8.png.jpeg');"></div>
       <div class="title">Referral from IIT-Bombay parent → booked free assessment → personalized roadmap</div>
     </div>
 
