--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
     .menu a{display:block;padding:14px 16px;color:#111;font-weight:600;border-bottom:1px solid #f1f5f9}
     .menu a:last-child{border-bottom:none}
     .menu.open{opacity:1;visibility:visible;transform:translateY(0)}
+    /* Accessible helper to keep brand name for screen readers */
+.sr-only{
+  position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden;
+  clip:rect(0,0,1,1); white-space:nowrap; border:0;
+}
+
+/* Logo image sizing */
+.logo{ display:inline-flex; align-items:center; gap:10px; font-weight:900; color:#000; font-size:18px }
+.logo-img{ height:36px; width:auto; display:block }
+@media (min-width:768px){ .logo-img{ height:44px } }
+
 
     /* Buttons */
     .btn{display:inline-flex;align-items:center;justify-content:center;min-height:48px;padding:12px 18px;border-radius:26px;font-weight:800;border:2px solid transparent;cursor:pointer;touch-action:manipulation}
@@ -280,7 +291,11 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-row">
-      <a class="logo" href="#">📘 IITuitions</a>
+      <a class="logo" href="#">
+  <img src="logo-tree.png" alt="iiTuitions" class="logo-img">
+  <span class="sr-only">iiTuitions</span>
+</a>
+
 
       <div class="nav-actions">
         <a class="btn btn-outline" href="#process">How It Works</a>
