--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
     .accordion.open .toggle{transform:rotate(180deg)}
     .toggle{transition:.2s}
     #examAcc, #scenarioAcc { margin-bottom:24px; }
-    #assessment-details, #roadmap-details, #mentorship-details { margin-bottom:14px; }
+    #assessment-details { margin-bottom:22px; }   /* keep as-is */
+#roadmap-details { margin-bottom:28px; }      /* ⬅️ more space before Step 3 */
+#mentorship-details { margin-bottom:32px; }   /* ⬅️ more space before Step 4 */
+
 
     #scenarioAcc { margin-bottom: 14px; }  /* space before Step 3 */
     
