--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>  o
+<head>  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>IITuitions — Transform Your Child's IIT Dreams into Reality</title>
@@ -21,7 +21,8 @@
 
     /* Header */
     .site-header{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--ring);box-shadow:0 2px 12px var(--shadow1)}
-    .header-row{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
+    .header-row{display:flex;align-items:center;justify-content:space-between;padding:6px 0}
+
     .logo{font-weight:900;color:#000;font-size:18px}
     .hamb{width:44px;height:44px;border:none;background:transparent;display:flex;flex-direction:column;gap:5px;align-items:center;justify-content:center}
     .hamb span{width:24px;height:3px;background:#000;border-radius:2px}
@@ -38,9 +39,8 @@
 
 /* Logo image sizing */
 .logo{ display:inline-flex; align-items:center; gap:10px; font-weight:900; color:#000; font-size:18px }
-.logo-img{ height:90px; width:auto; display:block }      /* mobile & tablet */
-@media (min-width:768px){ .logo-img{ height:128px } }    /* desktop */
- 
+.logo-img{ height:64px; width:auto; display:block }
+@media (min-width:768px){ .logo-img{ height:88px } }
 
 
     /* Buttons */
@@ -51,7 +51,8 @@
     .btn-wa:hover{background:#20BA5A}
 
     /* Hero */
-    .hero{background:var(--accent);color:#fff;padding:32px 12px 40px;text-align:center;position:relative}
+    .hero{background:var(--accent);color:#fff;padding:18px 12px 28px;text-align:center;position:relative}
+
     .hero .wrap{max-width:900px;margin:0 auto}
     .stats{display:grid;grid-template-columns:repeat(2,1fr);gap:6px;margin-bottom:14px}
     .pill{background:rgba(255,255,255,.16);border:1px solid rgba(255,255,255,.22);padding:8px 10px;border-radius:14px;font-size:12px;font-weight:800}
@@ -302,16 +303,7 @@
 
 
       
-      <div style="position:relative">
-        <button class="hamb" id="hamb" aria-label="Menu"><span></span><span></span><span></span></button>
-        <nav class="menu" id="menu">
-          <a href="#process">How It Works</a>
-          <a href="#founder">Founder</a>
-          <a href="#contact">Contact</a>
-        </nav>
-      </div>
-    </div>
-  </header>
+      
 
   <!-- Hero -->
   <section class="hero">
